# radarvan

./: .gitignore  .prettierignore  Procfile  README.md  gen_clinet.sh  main.py  package-lock.json  package.json  pyproject.toml  webpack.config.js
proto/: match.proto
public/: index.html  manifest.json
radarvan/: api_types.py  app.py  cncstats_types.py  db.py  db_setup.py  db_utils.py  log_time.py  main.py  manual.py  match_details.py  matches.py  parse_replay.py  player_ids.py  player_stats.py  replay_files.py  schedule.py  scrape_games.py  utils.py
src/: App.tsx  Client.ts  Colors.ts  CostBreakdown.tsx  GeneralStats.tsx  Generals.tsx  Map.tsx  MapStats.tsx  Matches.tsx  Menu.tsx  Menu.tsx.rej  PairStats.tsx  PlayerStats.tsx  ShowMatchDetails.tsx  Summary.tsx  TeamStats.tsx  Wrapped.tsx  general_utils.ts  maplist.ts
src/api/: runtime.ts
src/api/.openapi-generator/: FILES
src/api/apis/: DefaultApi.ts
src/api/models/: APM.ts  CostsBuiltObject.ts  CostsInput.ts  CostsOutput.ts  DateMessage.ts  Faction.ts  General.ts  GeneralWL.ts  HTTPValidationError.ts  MatchDetails.ts  MatchInfoInput.ts  MatchInfoOutput.ts  Matches.ts  MoneyValues.ts  ObjectSummary.ts  Player.ts  PlayerRateOverTimeInput.ts  PlayerRateOverTimeOutput.ts  PlayerStatFactionWL.ts  PlayerStatInput.ts  PlayerStatOutput.ts  PlayerStats.ts  PlayerSummary.ts  Spent.ts  SpentOverTime.ts  Team.ts  UpgradeEvent.ts  Upgrades.ts  ValidationError.ts  ValidationErrorLocInner.ts  WinLoss.ts  index.ts
src/generated_client/: client.gen.ts  sdk.gen.ts  types.gen.ts
src/google/protobuf/: timestamp.ts
src/proto/: match.ts
