[project]
name = "radarvan"
version = "0.1.0"
description = "Tracking generals stats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic>=2.12.0",
    "python-lsp-server[all]>=1.13.1",
    "ruff>=0.14.0",
    "s3fs>=2025.9.0",
    "streamlit>=1.50.0",
]
